<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
    android:id="@+id/tableLayout"
    android:layout_width="wrap_content"
    android:layout_height="245dp"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="100dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/input">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/button1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/button2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/button3"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/button4"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/button5"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button6"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/button6"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button7"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/button7"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button8"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/button8"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button9"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/button9"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonplus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/buttonPlus"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button0"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/button0"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonmul"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/buttonMul"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonminus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/buttonMinus"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonequal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/buttonEqual"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttondiv"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/buttonDiv"
            android:textSize="20sp" />
    </TableRow>
    </TableLayout>

    <TextView
    android:id="@+id/displayName"
    android:layout_width="wrap_content"
    android:layout_height="53dp"
    android:text="@string/textViewDefault"
    android:textColor="@android:color/darker_gray"
    android:textSize="40sp"
    android:layout_marginTop="100dp"
    app:layout_constraintBottom_toTopOf="@+id/tableLayout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0" />

    <Button
    android:id="@+id/renameBNT"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@android:color/holo_blue_light"
    android:text="@string/renameBTN"
    app:layout_constraintBottom_toTopOf="@+id/displayName"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
    android:id="@+id/input"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="0"
    android:textSize="30sp"
    android:textAlignment="center"
    android:textColor="@android:color/black"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    app:layout_constraintBottom_toTopOf="@+id/tableLayout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/displayName" />

    <Button
    android:id="@+id/clear"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@android:color/holo_blue_light"
    android:text="@string/clear"
    app:layout_constraintBottom_toTopOf="@id/tableLayout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/tableLayout" />

    <ImageButton
    android:id="@+id/del"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:background="@drawable/buttondel"
    android:backgroundTint="@color/black"
    android:contentDescription="@string/del"
    android:minWidth="48dp"
    android:minHeight="48dp"
    app:layout_constraintBottom_toTopOf="@+id/tableLayout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.663"
    app:layout_constraintStart_toEndOf="@+id/clear" />

<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="292dp"-->
<!--        android:layout_height="63dp"-->
<!--        android:layout_marginEnd="60dp"-->
<!--        android:text="Click on the button to open another activity!"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.446"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.459" />-->

<!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="159dp"-->
<!--        android:layout_height="63dp"-->
<!--        android:text="Click Me!!"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView"-->
<!--        app:layout_constraintVertical_bias="0.197" />-->

</androidx.constraintlayout.widget.ConstraintLayout>

